# covid19-epi

./: .editorconfig  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  COV_geo.c  COV_geo.h  COV_gpu.cu  COV_rand.c  COV_rand.h  Makefile  Makefile.icc  README.md  age_dist.c  age_dist.h  calc_infect.c  calc_infect.h  calc_kappa.c  calc_kappa.h  cities_all.csv  city_lat_long.c  city_lat_long.h  common.h  covid19.c  covid19.h  covid19_splitloop.c  death.c  death.h  distance.c  distance.h  hospital.c  hospital.h  household_lat_long.c  household_lat_long.h  infections.c  infections.h  initialize_infections.c  initialize_infections.h  interventions.c  interventions.h  (+14 more)
